fix(core-components-select): remove popup z-index

--- a/packages/select/src/index.module.css
+++ b/packages/select/src/index.module.css
@@ -30,9 +30,6 @@
 
 .popover {
     min-width: 100%;
-
-    /* должен быть всегда поверх других элементов */
-    z-index: 9999;
 }
 
 .listWrapper {
